--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
 			<button id="btn_flash" class='btn btn-arduino'>
 				<span class="fa fa-arrow-right fa-1_5x fa-fw"> </span>
 			</button>
+			<button id="btn_redirect_terminal" class='btn btn-arduino'>
+			    <span class="fa fa-arrow-right fa-1_5x fa-fw"> </span>
+			</button>
+
+			<button id="btn_upload_firmware" class='btn btn-arduino'>
+			    <span class="fa fa-arrow-up fa-1_5x fa-fw"> </span>
+			</button>
 			<span id="survol" style="color:#fff"></span>
 		</div>
 		<div id="btn_group" class="btn-group" role="group">
