--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 			<button id="btn_flash" class='btn btn-arduino'>
 				<span class="fa fa-arrow-right fa-1_5x fa-fw"> </span>
 			</button>
-			<button id="btn_redirect_terminal" class='btn btn-arduino'>
+			<button id="btn_redirect_terminal" class="btn btn-arduino">
 			    T
 			</button>
-			<button id="btn_upload_firmware" class='btn btn-arduino'>
+			<button id="btn_upload_firmware" class="btn btn-arduino">
 			    U
 			</button>
 			<span id="survol" style="color:#fff"></span>
