--- a/index.html
+++ b/index.html
@@ -404,11 +404,11 @@
 <script type="text/javascript">
 
 	document.getElementById('btn_redirect_terminal').addEventListener('click', function() {
-	    window.location.href = 'terminal/index.html';
+	    window.location.href = 'terminal/';
 	});
 
 	document.getElementById('btn_upload_firmware').addEventListener('click', function() {
-	    window.location.href = 'upload-firmware/index.html';
+	    window.location.href = 'upload-firmware/';
 	});
 
 	var config = {
