--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 		</div>
 	</div>
 	
-	<div>
+	<div style="display:none;">
 		<div id="content_console" class="content">
 	       <span class="icon" id="tipsGeneric"><tt>Ctrl+Insert</tt> to copy and <tt>Shift+Insert</tt> to paste</span>
 	    	<tr height="25%" id="termTR">
