--- a/index.html
+++ b/index.html
@@ -483,13 +483,13 @@ var cc = document.getElementById("content_console");
 var cf = document.getElementById("content_files");
 
 	function showHtmlDiv1() {
-	cc.style.display = "block";
+	cc.style.display = "inline-block";
     cf.style.display = "none";
 	}
 	
 	function showHtmlDiv2() {
 	cc.style.display = "none";
-    cf.style.display = "block";
+    cf.style.display = "inline-block";
 	}
 
 	var config = {
