--- a/index.html
+++ b/index.html
@@ -485,11 +485,13 @@ var cf = document.getElementById("content_files");
 	function showHtmlDiv1() {
 	cc.style.display = "inline-block";
     cf.style.display = "none";
+    divBody.style.display = "none"
 	}
 	
 	function showHtmlDiv2() {
 	cc.style.display = "none";
     cf.style.display = "inline-block";
+    divBody.style.display = "none"
 	}
 
 	var config = {
