--- a/index.html
+++ b/index.html
@@ -486,12 +486,21 @@ var cf = document.getElementById("content_files");
 	cc.style.display = "inline-block";
     cf.style.display = "none";
     divBody.style.display = "none"
+    if (cc.style.display === "inline-block"){
+    	cc.style.display = "none";
+    	cf.style.display = "none";
+    	divBody.style.display = "block"
+    }
 	}
 	
 	function showHtmlDiv2() {
 	cc.style.display = "none";
     cf.style.display = "inline-block";
     divBody.style.display = "none"
+    if (cf.style.display === "inline-block"){
+    	cc.style.display = "none";
+    	cf.style.display = "none";
+    	divBody.style.display = "block"
 	}
 
 	var config = {
