--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ var cf = document.getElementById("content_files");
 	cc.style.display = "inline-block";
     cf.style.display = "none";
     divBody.style.display = "none"
-    if (cc.style.display === "inline-block"){
+    if (cc.style.display == "inline-block"){
     	cc.style.display = "none";
     	cf.style.display = "none";
     	divBody.style.display = "block"
@@ -497,7 +497,7 @@ var cf = document.getElementById("content_files");
 	cc.style.display = "none";
     cf.style.display = "inline-block";
     divBody.style.display = "none"
-    if (cf.style.display === "inline-block"){
+    if (cf.style.display == "inline-block"){
     	cc.style.display = "none";
     	cf.style.display = "none";
     	divBody.style.display = "block"
