--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 			</button>
 			<span id="survol" style="color:#fff"></span>
 			
-			<button onclick="toggleOverlay()">Toggle Second Website</button>
+			<button onclick="toggleOverlay()">Console & Files</button>
 		</div>
 
 
@@ -284,8 +284,8 @@
 		</div>
 		<div role="tabpanel" id="content_code" class="tab-pane fade"></div>
 
-		<div id="content_blocks" class="tab-pane fade in active" style="position: relative;">
-		<iframe width="100%" height="100%" id="overlayIframe"></iframe>
+		<div id="content_blocks" style="position: relative;">
+		<iframe width="100%" height="100%" id="overlayIframe" style="display:none;"></iframe>
 		</div>
 	</div>
 	
