--- a/upload-firmware/index.html
+++ b/upload-firmware/index.html
@@ -78,7 +78,7 @@
       <div id="app">
         <div id="commands">
           <div class="upload">
-            <label>Offset: 0x <input class="offset" type="text" value="0" /></label>
+            <label>Offset: 0x <input class="offset" type="text" value="1000" /></label>
             <label class="firmware">
               <input type="file" accept=".bin" />
               <span>Choose a file&hellip;</span>
@@ -86,10 +86,10 @@
             <button id="setDefaultFile" type="button">Set Default File</button>
             <div class="progress-bar hidden"><div></div></div>
           </div>
-          <div class="upload" style="display: none;">
+          <div class="upload">
             <label
               >Offset: 0x
-              <input class="offset" type="text" value="0" />
+              <input class="offset" type="text" value="610000" />
             </label>
             <label class="firmware">
               <input type="file" accept=".bin" />
