--- a/upload-firmware/index.html
+++ b/upload-firmware/index.html
@@ -77,26 +77,24 @@
       </div>
       <div id="app">
         <div id="commands">
-          <div class="upload" id="uploadSection1">
+          <div class="upload">
             <label>Offset: 0x <input class="offset" type="text" value="1000" /></label>
             <label class="firmware">
-              <input type="file" accept=".bin" id="firmwareFile1" />
+              <input type="file" accept=".bin" />
               <span>Choose a file&hellip;</span>
             </label>
-            <button class="setDefaultFileBtn" data-file-input="firmwareFile1" type="button">Set Default File</button>
             <div class="progress-bar hidden"><div></div></div>
           </div>
-
-          <div class="upload" id="uploadSection2">
-            <label>Offset: 0x <input class="offset" type="text" value="610000" /></label>
+          <div class="upload">
+            <label
+              >Offset: 0x<input class="offset" type="text" value="610000" />
+            </label>
             <label class="firmware">
-              <input type="file" accept=".bin" id="firmwareFile2" />
+              <input type="file" accept=".bin" />
               <span>Choose a file&hellip;</span>
             </label>
-            <button class="setDefaultFileBtn" data-file-input="firmwareFile2" type="button">Set Default File</button>
             <div class="progress-bar hidden"><div></div></div>
           </div>
-
           <div class="upload" style="display: none;">
             <label
               >Offset: 0x
