--- a/upload-firmware/index.html
+++ b/upload-firmware/index.html
@@ -78,7 +78,10 @@
       <div id="app">
         <div id="commands">
           <div class="upload">
-            <label>Offset: 0x <input class="offset" type="text" value="1000" /></label>
+            <label
+              >Offset: 0x
+              <input class="offset" type="text" value="0" />
+            </label>
             <label class="firmware">
               <input type="file" accept=".bin" />
               <span>Choose a file&hellip;</span>
@@ -87,10 +90,12 @@
           </div>
           <div class="upload">
             <label
-              >Offset: 0x<input class="offset" type="text" value="610000" />
+              >Offset: 0x
+              <input class="offset" type="text" value="0" />
             </label>
             <label class="firmware">
               <input type="file" accept=".bin" />
+              </svg>
               <span>Choose a file&hellip;</span>
             </label>
             <div class="progress-bar hidden"><div></div></div>
