--- a/index.html
+++ b/index.html
@@ -156,8 +156,27 @@
 			</button>
 			<span id="survol" style="color:#fff"></span>
 			
-			<button onclick="toggleOverlay1()">Console & Files</button>
-			<button onclick="toggleOverlay2()">Firmware</button>
+			<button onclick="toggleOverlay1()" style="
+				  color: #727272; 
+				  height: 35px;
+				  background-color: #fff; 
+				  border-color: #727272; 
+				  line-height: 0px;
+				  border-width: 1px;
+				  margin-left: 2px;
+				  margin-right: 2px;
+				  border-radius:5px;"
+				  >Console & Files</button>
+			<button onclick="toggleOverlay2()" style="
+				  color: #727272; 
+				  height: 35px;
+				  background-color: #fff; 
+				  border-color: #727272; 
+				  line-height: 0px;
+				  border-width: 1px;
+				  margin-left: 2px;
+				  margin-right: 2px;
+				  border-radius:5px;">Firmware</button>
 		</div>
 
 
